--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,16 @@
 
 
 
-<h1> Hola mundo </h1>
+
+<div class="row container mt-4">
+
+    <div class="col-3">
+        <app-sidebar></app-sidebar>
+    </div>
+
+    <div class="col">
+        <router-outlet></router-outlet>
+    </div>
+
+
+</div>
