--- a/src/app/paises/pages/por-pais/por-pais.component.html
+++ b/src/app/paises/pages/por-pais/por-pais.component.html
@@ -1,36 +1,24 @@
-
-
 <h2>Por país</h2>
-
 <hr>
-
 <div class="row">
-
     <div class="col">
-
-        <form autocomplete="off">
-
+        <form (ngSubmit)="buscar()" autocomplete="off">
             <input
             type="text"
             name="termino"
             placeholder="Buscar país..."
+            [(ngModel)]="termino"
             class="form-control"/>
-
         </form>
-
     </div>
-
 </div>
-
 <hr>
-
-<div class="alert alert-danger">
-    No se encontró nada
+<div *ngIf="error" class="alert alert-danger">
+    No se encontró {{termino | titlecase}}
 </div>
-
 <div class="row">
     <div class="col">
-        <table class="table table-hover">
+        <table *ngIf="mostrarTabla" class="table table-hover">
             <thead>
                 <tr>
                     <th> # </th>
@@ -40,13 +28,13 @@
                     <th></th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody *ngFor="let pais of paises; let i = index">
                 <tr>
-                  <td>1</td>
-                  <td>bandera</td>
-                  <td>nombre</td>
-                  <td>546546</td>
-                  <td><a href="#"></a> Ver... </td>
+                  <td> {{ i+1 }} </td>
+                  <td> <img class="small-flag" [src]="pais.flags.png" alt="Bandera de pais.name.common"> </td>
+                  <td> {{ pais.name.common }} </td>
+                  <td> {{ pais.population | number}} </td>
+                  <td> <a [routerLink]="['/pais', pais.cioc]" >  Ver...  </a></td>
                 </tr>
             </tbody>
         </table>
