Busqueda por capital implementada

--- a/src/app/paises/components/pais-input/pais-input.component.html
+++ b/src/app/paises/components/pais-input/pais-input.component.html
@@ -2,7 +2,8 @@
   <input
   type="text"
   name="termino"
-  placeholder="Buscar país..."
+  [placeholder]="placeholder"
   [(ngModel)]="termino"
+  (input)="teclaPresionada( $event )"
   class="form-control"/>
 </form>
