--- a/src/app/paises/pages/por-pais/por-pais.component.html
+++ b/src/app/paises/pages/por-pais/por-pais.component.html
@@ -3,11 +3,31 @@
 <div class="row">
     <div class="col">
         <app-pais-input
-        (onEnter)="buscar($event)"
-        (onDebounce)="sugerencias($event)"
-        [placeholder]="placeholder"></app-pais-input>
+        (onEnter)     = "buscar($event)"
+        (onDebounce)  = "sugerencias($event)"
+        [placeholder] = "placeholder">
+      </app-pais-input>
     </div>
 </div>
+<ul
+  *ngIf = "mostrarSugerencias"
+  class = "list-group">
+  <li
+    *ngFor = "let pais of paisesSugeridos"
+    class  = "list-group-item list-group-item-action">
+    <a
+      [routerLink] = "['/pais',pais.cca3]">
+      {{ pais.name.common }}
+    </a>
+  </li>
+  <li  class  = "list-group-item list-group-item-action"
+      (click) = "buscarTermino(termino)">
+    <a class  = "nav-link">
+      Buscar "{{ termino }}"
+    </a>
+  </li>
+</ul>
+
 <div *ngIf="error" class="alert alert-danger">
     No se encontró {{termino | titlecase}}
 </div>
